--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body >
-   <header class="page-header">
-<nav class="container">
+   <header class="page-header container"  >
+    
     <div class="header-nav">
     <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio</a>
     <ul class="site-nav">
@@ -20,16 +20,16 @@
         <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
         <li><a href="#" class="link" >Контакти</a></li>
     </ul>
-    
+    </div>
     <ul class="header-auth">
         <li><a href="mailto:info@devstudio.com" class="auth-nav">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
     </ul>
-</div>
-</nav>
+   
    </header>
    <main> <div class="container">
-    <section class="decision">    
+    <section class="decision">  
+        <div class="container">
         <h1 class="decision-title">Ефективні рішення для вашого бізнесу </h1>
         <button type="button" class="button">Замовити послугу</button>
     </div>
@@ -57,41 +57,48 @@
     </div>
     </section>
    <section  class="section-team"> 
-    <nav class="container">
+    <div class="container">
     <h2 class="team">Наша команда</h2>
     <ul class="team-board">
         <li class="team-list">
             <img src="./images/avatar/Igor.jpg" alt="Ігор Дем'яненко" width="270" >
+            <div class="team-font">
             <h3 class="team-title">Ігор Дем'яненко</h3>
-            <p lang="en" class="team-line">Product Designer</p>
+            <p lang="en" class="team-line">Product Designer</p></div>
         </li>
         <li class="team-list">
             <img src="./images/avatar/Olga.jpg" alt="Ольга Рєпіна" width="270" >
+            <div class="team-font">
             <h3 class="team-title">Ольга Рєпіна</h3>
-            <p lang="en" class="team-line">Frontend Developer</p></li>
+            <p lang="en" class="team-line">Frontend Developer</p>
+            </div></li>
         <li class="team-list">
             <img src="./images/avatar/Mukola.jpg" alt="Микола Тарасов" width="270" >
+            <div class="team-font">
             <h3 class="team-title">Микола Тарасов</h3>
-            <p lang="en" class="team-line">Marketing</p></li>
+            <p lang="en" class="team-line">Marketing</p>
+        </div></li>
         <li class="team-list">
             <img src="./images/avatar/Muhailo.jpg" alt="Михайло Єрмаков" width="270" >
+            <div class="team-font"> 
             <h3 class="team-title">Михайло Єрмаков</h3>
-            <p lang="en" class="team-line">UI Designer</p></li>
+            <p lang="en" class="team-line">UI Designer</p>
+        </div></li>
     </ul>
-</nav>
+    </div>
    </section>
 </main>
 <footer class="footer">
     <div class="container">
     <a href="./index.html" class="logo-black"><span class="logo-blue">Web</span>Studio</a>
-    <address>
+    <address class="adres">
     <ul class="footer-link">
         <li><a href="https://goo.gl/maps/fs6Ps8vBz89vZ9626" target="_blank" rel="noreferer noopener" class="footer-adress">м. Київ, пр-т Лесі Українки, 26</a></li>
         <li><a href="mailto:info@devstudio.com" class="footer-mail">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a></li>
     </ul>
-</div>
 </address>
+</div>
 </footer>
 </body>
 </html>
