--- a/portfolio.html
+++ b/portfolio.html
@@ -11,22 +11,19 @@
     
 </head>
 <body>
-    <header class="page-header">
-        <nav class="container">
+    <header class="page-header container">
         <div class="portfolio-nav">
-        <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio</a>
+            <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio</a>
         <ul class="site-nav">
             <li><a href="./index.html" class="link">Студія</a></li>
             <li><a href="./portfolio.html" class="link active">Портфоліо</a></li>
             <li><a href="#" class="link">Контакти</a></li>
         </ul>
+        </div>
         <ul  class="portfolio-auth">
             <li><a href="mailto:info@devstudio.com" class="auth-nav">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
         </ul>
-    </div>
-        
-        </nav>
  </header>
    <main>
     <section class="nav-portfolio">
@@ -42,47 +39,57 @@
         <ul class="services">
             <li >
                 <a href="#" class="services-title"><img src="./images/port1.jpg"  alt="ноутбук" width="370" height="294"  >
-                <h2 class="services-link"> Технокряк</h2>
-                <p class="services-line">Веб-сайт</p></a>
+                <div class="services-type">
+                    <h2 class="services-link"> Технокряк</h2>
+                <p class="services-line">Веб-сайт</p>
+              </div></a>
             </li>
             <li>
             <a href="#" class="services-title"><img src="./images/port_2.jpg" alt="постер" width="370" height="294">
-            <h2 class="services-link">Постер New Orlean vs Golden Star</h2>
-            <p class="services-line">Дизайн</p></a>
+             <div class="services-type"><h2 class="services-link">Постер New Orlean vs Golden Star</h2>
+            <p class="services-line">Дизайн</p>
+            </div></a>
             </li>
             <li>
              <a href="#" class="services-title"><img src="./images/port_3.jpg" alt="ресторан" width="370" height="294" >
-            <h2 class="services-link">Ресторан Seafood</h2>
-            <p class="services-line">Додаток</p></a>
+             <div class="services-type"> <h2 class="services-link">Ресторан Seafood</h2>
+            <p class="services-line">Додаток</p>
+            </div></a>
             </li>
             <li>
                 <a href="#" class="services-title"><img src="./images/port_4.jpg" alt="проект" width="370" height="294" >
-            <h2 class="services-link">Проект Prime</h2>
-            <p class="services-line">Маркетинг</p></a>
+             <div class="services-type"><h2 class="services-link">Проект Prime</h2>
+            <p class="services-line">Маркетинг</p>
+             </div></a>
             </li>
             <li>
                 <a href="#" class="services-title"><img src="./images/port_5.jpg" alt="проект ящик" width="370" height="294" >
-            <h2 class="services-link">Проект Boxes</h2>
-            <p class="services-line">Додаток</p></a>
+             <div class="services-type"><h2 class="services-link">Проект Boxes</h2>
+            <p class="services-line">Додаток</p>
+             </div></a>
             </li>
             <li>
                 <a href="#" class="services-title"><img src="./images/port_6.jpg" alt="монітор" width="370" height="294" >
-            <h2 class="services-link">Inspiration has no Borders</h2>
-            <p class="services-line">Веб-сайт</p></a>
+            <div class="services-type"> <h2 class="services-link">Inspiration has no Borders</h2>
+            <p class="services-line">Веб-сайт</p>
+            </div></a>
             </li>
             <li>
                 <a href="#" class="services-title"><img src="./images/port7.jpg" alt="журнал" width="370" height="294">
-            <h2  class="services-link">Видання Limited Edition</h2>
-            <p class="services-line">Дизайн</p></a>
+             <div class="services-type"><h2  class="services-link">Видання Limited Edition</h2>
+            <p class="services-line">Дизайн</p>
+             </div></a>
             </li>
             <li>
                 <a href="#" class="services-title"><img src="./images/port_8.jpg" alt="бірка" width="370" height="294" >
-            <h2 class="services-link">Проект LAB</h2>
-            <p class="services-line">Маркетинг</p></a>
+             <div class="services-type"><h2 class="services-link">Проект LAB</h2>
+            <p class="services-line">Маркетинг</p>
+            </div></a>
             </li>
             <li><a href="#" class="services-title"><img src="./images/port9.jpg" alt="клавіатура" width="370" height="294" >
-            <h2 class="services-link">Growing Business</h2>
-            <p class="services-line">Додаток</p></a>
+             <div class="services-type"><h2 class="services-link">Growing Business</h2>
+            <p class="services-line">Додаток</p>
+            </div></a>
             </li>
         </ul>
         </nav>
@@ -91,7 +98,7 @@
     <footer class="footer">
         <nav class="container">
         <a href="./index.html" class="logo-black"><span class="logo-blue">Web</span>Studio</a>
-        <address>
+        <address class="adres">
         <ul class="footer-link">
             <li><a href="https://goo.gl/maps/fs6Ps8vBz89vZ9626" target="_blank" rel="noreferer noopener" class="footer-adress">м. Київ, пр-т Лесі Українки, 26</a></li>
             <li><a href="mailto:info@devstudio.com" class="footer-mail">info@devstudio.com</a></li>
