--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body >
-   <header class="page-header container"  >
-    
-    <div class="header-nav">
+   <header class="page-header">
+    <div class="container flex">
+    <nav class="header-nav">
     <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio</a>
     <ul class="site-nav">
         <li><a href="./index.html" class="link active">Студія</a></li>
         <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
         <li><a href="#" class="link" >Контакти</a></li>
     </ul>
-    </div>
+    </nav>
     <ul class="header-auth">
         <li><a href="mailto:info@devstudio.com" class="auth-nav">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
     </ul>
-   
+   </div>
    </header>
-   <main> <div class="container">
+   <main> 
     <section class="decision">  
         <div class="container">
         <h1 class="decision-title">Ефективні рішення для вашого бізнесу </h1>
