--- a/portfolio.html
+++ b/portfolio.html
@@ -11,23 +11,25 @@
     
 </head>
 <body>
-    <header class="page-header container">
-        <div class="portfolio-nav">
+    <header class="page-header">
+        <div class="container flex">
+        <nav class="portfolio-nav">
             <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio</a>
         <ul class="site-nav">
             <li><a href="./index.html" class="link">Студія</a></li>
             <li><a href="./portfolio.html" class="link active">Портфоліо</a></li>
             <li><a href="#" class="link">Контакти</a></li>
         </ul>
-        </div>
+        </nav>
         <ul  class="portfolio-auth">
             <li><a href="mailto:info@devstudio.com" class="auth-nav">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
         </ul>
+    </div>
  </header>
    <main>
     <section class="nav-portfolio">
-        <nav class="container">
+        <div class="container">
         <h1 class="visually-hidden">portfolio</h1>
         <ul class="button-list">
             <li><button type="button" class="button-portfolio">Усі</button></li>
@@ -92,7 +94,7 @@
             </div></a>
             </li>
         </ul>
-        </nav>
+        </div>
     </section>
     </main>
     <footer class="footer">
