--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </ul>
        </div>
     </section> 
-    <section class="sections">
+    <section class="sections-lane">
         <div class="container">
         <h2 class="sections-list">Чим ми займаємося</h2>
         <ul class="sections-line">
