--- a/portfolio.html
+++ b/portfolio.html
@@ -100,14 +100,14 @@
     <footer class="footer">
         <nav class="container">
         <a href="./index.html" class="logo-black"><span class="logo-blue">Web</span>Studio</a>
-        <address class="adres">
+       <address class="adres">
         <ul class="footer-link">
-            <li><a href="https://goo.gl/maps/fs6Ps8vBz89vZ9626" target="_blank" rel="noreferer noopener" class="footer-adress">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com" class="footer-mail">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a></li>
+            <li class="footer-line"><a href="https://goo.gl/maps/fs6Ps8vBz89vZ9626" target="_blank" rel="noreferer noopener" class="footer-adress">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li class="footer-line"><a href="mailto:info@devstudio.com" class="footer-mail">info@devstudio.com</a></li>
+            <li class="footer-line"><a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a></li>
         </ul>
-    </nav>
-    </address>
+      </address>>
+     </nav>
     </footer>
 
 </body>
